# django_xlsx_export

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: PrivatePackage.yml  publish-private.yml  python-publish-private.yml  python-publish-test.yml  python-publish.yml
django_xlsx_export/: apps.py  views.py
